--- a/LinkItSmart7688_default.config
+++ b/LinkItSmart7688_default.config
@@ -4596,6 +4596,7 @@ CONFIG_PACKAGE_wwan=y
 # RFN
 #
 CONFIG_PACKAGE_RFN-lrffp=y
+CONFIG_PACKAGE_RFN-lrffpti=y
 # CONFIG_PACKAGE_lxfp is not set
 CONFIG_PACKAGE_rfn-mtk-linkit-webui=y
 
