--- a/LinkItSmart7688_base.config
+++ b/LinkItSmart7688_base.config
@@ -4417,6 +4417,7 @@ CONFIG_PACKAGE_wpad-mini=y
 # RFN
 #
 CONFIG_PACKAGE_RFN-lrffp=y
+CONFIG_PACKAGE_RFN-lrffpti=y
 # CONFIG_PACKAGE_lxfp is not set
 CONFIG_PACKAGE_rfn-mtk-linkit-webui=y
 
